pkg/tests/testthat/errors/isis/test_numerical_problems.isi
cmpmdl("../mdl/numerical_problems");
readmdl("../mdl/numerical_problems");
setmdp(2011y);
x = 1;
y = 1;
setsdbg(dbgon);
solve;
